--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,24 @@
 	<meta charset="UTF-8">
 	<title>Touch events demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="wrapper">
 		<div class="box">
-			<div class="elmt" id="one">1</div>
-			<div class="elmt" id="two">2</div>
-			<div class="elmt">3</div>
-			<div class="elmt">4</div>
-			<div class="elmt">
-				<p>Потяни любой край,</p>
-				<p>один или несколько одновременно</p>
+			<div class="elmt" id="one"></div>
+			<div class="elmt" id="two"></div>
+			<div class="elmt" id="three"></div>
+			<div class="elmt" id="four"></div>
+			<div class="elmt" id="five">
+				<p>Tap on any color</p>
+				<p class="better" id=better>better experience is in landscape mode</p>
 			</div>
-			<div class="elmt">6</div>
-			<div class="elmt">7</div>
-			<div class="elmt">8</div>
-			<div class="elmt">9</div>
+			<div class="elmt" id="six"></div>
+			<div class="elmt" id="seven"></div>
+			<div class="elmt" id="eight"></div>
+			<div class="elmt" id="nine"></div>
 		</div>
 	</div>
 	<script src="https://cdnjs.com/libraries/hammer.js/"></script>
