--- a/public/index.html
+++ b/public/index.html
@@ -10,18 +10,18 @@
 <body>
 	<div class="wrapper">
 		<div class="box">
-			<div class="elmt" id="one"></div>
-			<div class="elmt" id="two"></div>
-			<div class="elmt" id="three"></div>
-			<div class="elmt" id="four"></div>
+			<div class="elmt" id="one">1</div>
+			<div class="elmt" id="two">2</div>
+			<div class="elmt" id="three">3</div>
+			<div class="elmt" id="four">4</div>
 			<div class="elmt" id="five">
 				<p>Tap on any color</p>
 				<p class="better" id=better>better experience is in landscape mode</p>
 			</div>
-			<div class="elmt" id="six"></div>
-			<div class="elmt" id="seven"></div>
-			<div class="elmt" id="eight"></div>
-			<div class="elmt" id="nine"></div>
+			<div class="elmt" id="six">6</div>
+			<div class="elmt" id="seven">7</div>
+			<div class="elmt" id="eight">8</div>
+			<div class="elmt" id="nine">9</div>
 		</div>
 	</div>
 	<script src="https://cdnjs.com/libraries/hammer.js/"></script>
