--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 </head>
 <body>
 	<div class="wrapper">
