--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 	<div class="wrapper">
 		<div class="box">
 			<div class="elmt" id="one">1</div>
-			<div class="elmt" id="two">2</div>
+			<div class="elmt" id="two"></div>
 			<div class="elmt" id="three">3</div>
 			<div class="elmt" id="four">4</div>
 			<div class="elmt" id="five">
