сделала сетку для захватчика

--- a/public/index2.html
+++ b/public/index2.html
@@ -1,13 +1,251 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Touch events homework v3</title>
-    <link rel="stylesheet" href="style2.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Touch events homework v3</title>
+	<link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="style2.css">
+	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 </head>
 <body>
-    <div class="wrapper"></div>
-    <script src="app2.js"></script>
+	<div class="wrapper">
+		<div class="header">
+			<h1>Это Инопланетный захватчик</h1>
+		</div>
+		<div class="main">
+			<div class="invader">
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+			</div>
+		</div>
+		<div class="aside">
+			<h2>Он кое-что умеет, попробуй!</h2>
+		</div>
+	</div>
+	<script src="app2.js"></script>
 </body>
 </html>
