--- a/public/index2.html
+++ b/public/index2.html
@@ -64,7 +64,17 @@
 			</div>
 		</div>
 		<div class="aside">
-			<h2>Он кое-что умеет, попробуй!</h2>
+			<h2>Он умеет:</h2>
+			<div class="perks">
+				<h3 class="perks__name">Пиу-пиу!</h3>
+				<p class="perks__desc">тапнуть два раза</p>
+				<h3 class="perks__name">Сбежать...</h3>
+				<p class="perks__desc">свайп вправо или влево</p>
+				<h3 class="perks__name">Terminator mode</h3>
+				<p class="perks__desc">увеличить</p>
+				<h3 class="perks__name">Секретный режим</h3>
+				<p class="perks__desc">догадайтесь сами</p>
+			</div>
 		</div>
 	</div>
 	<script src="app2.js"></script>
