прибила старую версию

--- a/public/index.html
+++ b/public/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Touch events demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<title>Touch events homework v3</title>
+	<link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="style2.css">
 	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 </head>
 <body>
 	<div class="wrapper">
-		<div class="box">
-			<div class="elmt" id="one"></div>
-			<div class="elmt" id="two"></div>
-			<div class="elmt" id="three"></div>
-			<div class="elmt" id="four">4</div>
-			<div class="elmt" id="five">
-				<p>Tap on any color</p>
-				<p class="better" id=better>better experience is in landscape mode</p>
+		<div class="header">
+			<h1>Это Инопланетный захватчик</h1>
+		</div>
+		<div class="main">
+			<div class="invader">
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
+				<div class="invader_el"></div>
 			</div>
-			<div class="elmt" id="six">6</div>
-			<div class="elmt" id="seven">7</div>
-			<div class="elmt" id="eight">8</div>
-			<div class="elmt" id="nine">9</div>
+		</div>
+		<div class="aside">
+			<h2>Он умеет:</h2>
+			<div class="perks">
+				<h3 class="perks__name">Пиу-пиу!</h3>
+				<p class="perks__desc">тапнуть два раза</p>
+				<h3 class="perks__name">Сбежать...</h3>
+				<p class="perks__desc">свайп вправо или влево</p>
+				<h3 class="perks__name">Terminator mode</h3>
+				<p class="perks__desc">увеличить</p>
+				<h3 class="perks__name">Секретный режим</h3>
+				<p class="perks__desc">догадайтесь сами</p>
+			</div>
 		</div>
 	</div>
-	<script src="https://cdnjs.com/libraries/hammer.js/"></script>
-	<script src="app.js"></script>
+	<script src="app2.js"></script>
 </body>
 </html>
