поправила подключение css и js

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Touch events homework v3</title>
 	<link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="style2.css">
+	<link rel="stylesheet" href="style.css">
 	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 </head>
 <body>
@@ -77,6 +77,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="app2.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
