заготовка для даблтапа

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Touch events homework v3</title>
 	<link href="https://fonts.googleapis.com/css?family=Kelly+Slab|Roboto" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<script src="https://hammerjs.github.io/dist/hammer.js"></script>
 </head>
 <body>
 	<div class="wrapper">
 		<div class="header">
-			<h1>Это Инопланетный захватчик</h1>
+			<h1>Это Космический Захватчик</h1>
 		</div>
 		<div class="main">
 			<div class="invader">
@@ -68,7 +69,7 @@
 			<div class="perks">
 				<h3 class="perks__name">Пиу-пиу!</h3>
 				<p class="perks__desc">тапнуть два раза</p>
-				<h3 class="perks__name">Сбежать...</h3>
+				<h3 class="perks__name">Сбежать</h3>
 				<p class="perks__desc">свайп вправо или влево</p>
 				<h3 class="perks__name">Terminator mode</h3>
 				<p class="perks__desc">увеличить</p>
