добавила обработку двойного тапа

--- a/public/index.html
+++ b/public/index.html
@@ -15,53 +15,57 @@
 			<h1>Это Космический Захватчик</h1>
 		</div>
 		<div class="main">
-			<div class="invader">
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
-				<div class="invader_el"></div>
+			<div class="invader" style="color: red">
+				<div class="invader_el">1</div>
+				<div class="invader_el">2</div>
+				<div class="invader_el">3</div>
+				<div class="invader_el">4</div>
+				<div class="invader_el">5</div>
+				<div class="invader_el">6</div>
+				<div class="invader_el">7</div>
+				<div class="invader_el">8</div>
+				<div class="invader_el">9</div>
+				<div class="invader_el">10</div>
+				<div class="invader_el">11</div>
+				<div class="invader_el">12</div>
+				<div class="invader_el">13</div>
+				<div class="invader_el">14</div>
+				<div class="invader_el">15</div>
+				<div class="invader_el">16</div>
+				<div class="invader_el">17</div>
+				<div class="invader_el">18</div>
+				<div class="invader_el">19</div>
+				<div class="invader_el">20</div>
+				<div class="invader_el">21</div>
+				<div class="invader_el">22</div>
+				<div class="invader_el">23</div>
+				<div class="invader_el">24</div>
+				<div class="invader_el">25</div>
+				<div class="invader_el">26</div>
+				<div class="invader_el">27</div>
+				<div class="invader_el">28</div>
+				<div class="invader_el">29</div>
+				<div class="invader_el">30</div>
+				<div class="invader_el">31</div>
+				<div class="invader_el">32</div>
+				<div class="invader_el">33</div>
+				<div class="invader_el">34</div>
+				<div class="invader_el">35</div>
+				<div class="invader_el">36</div>
+				<div class="invader_el">37</div>
+				<div class="invader_el">38</div>
+				<div class="invader_el">
+					<i class="fas fa-star"></i>
+				</div>
+				<div class="invader_el">40</div>
+				<div class="invader_el">41</div>
+				<div class="invader_el">
+					<i class="fas fa-star"></i>
+				</div>
+				<div class="invader_el">43</div>
+				<div class="invader_el">44</div>
+				<div class="invader_el">45</div>
+				<div class="invader_el">46</div>
 			</div>
 		</div>
 		<div class="aside">
