добавлен режим терминатора

--- a/public/index.html
+++ b/public/index.html
@@ -66,6 +66,9 @@
 				<div class="invader_el"></div>
 				<div class="invader_el"></div>
 				<div class="invader_el"></div>
+				<div class="eye">
+					<div class="eye__inner"></div>
+				</div>
 			</div>
 		</div>
 		<div class="aside">
@@ -76,9 +79,9 @@
 				<h3 class="perks__name">Сбежать</h3>
 				<p class="perks__desc">свайп вправо или влево</p>
 				<h3 class="perks__name">Terminator mode</h3>
-				<p class="perks__desc">увеличить</p>
+				<p class="perks__desc">нажать и удерживать </p>
 				<h3 class="perks__name">Секретный режим</h3>
-				<p class="perks__desc">догадайтесь сами</p>
+				<p class="perks__desc">...</p>
 			</div>
 		</div>
 	</div>
