--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 		</div>
 		<div class="main">
 			<div class="invader" style="color: red">
-				<div class="invader_el"></div>
+				<div class="invader_el">\xF0\x9F\x92\xA9</div>
 				<div class="invader_el"></div>
 				<div class="invader_el"></div>
 				<div class="invader_el"></div>
