--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
 			<h1>Это Космический Захватчик</h1>
 		</div>
 		<div class="main">
-			<div class="invader" style="color: red">
+			<img src="http://www.freeiconspng.com/uploads/poop-emoji-png---images-free-download-6.png" class="poo">
+			<div class="invader">
 				<div class="invader_el"></div>
 				<div class="invader_el"></div>
 				<div class="invader_el"></div>
